--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
                     <artifactId>hamcrest-core</artifactId>
                 </exclusion>
             </exclusions>
+
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -34,11 +35,18 @@
             <version>20.1.0</version>
             <scope>compile</scope>
         </dependency>
-        <!-- This will get hamcrest-core automatically -->
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
